--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.2.0",
     "chalk-animation": "^2.0.3",
     "figlet": "^1.5.2"
   }
